# Buildora

./: .env.example  .gitignore  CLAUDE.md  FILE_STRUCTURE.md  GITHUB_MANAGEMENT.md  PLAN.md  README.md  SANTA_REVIEW_FINDINGS.md  TESTING.md  docker-compose.yml  knowledge_base.json  pyproject.toml  test_telegram.py
.agents/skills/: .antigravity-install-manifest.json
.claude/: settings.local.json
Ref documents/: Buildora_PRD_v2 (1).docx  FILE_STRUCTURE.md  QUICKSTART.md  buildora_architecture_and_structure.html
Ref documents/test docs/dummy doc 2/: Skyline_Heights_Contract (Project).docx
Ref documents/test docs/eco green/: CONSTRUCTION_CONTRACT (EcoGreen).docx  PROJECT_SCHEDULE_AND_MILESTONES (EcoGreen).docx
Ref documents/test scripts/: test_openai_integration.py  test_report.py  test_zai_integration.py
backend/: Dockerfile  chatbot.py  main.py
backend/agents/: contracts.py  orchestrator.py
backend/agents/agent_a/: agent.py  parsers.py  prompts.py
backend/agents/agent_b/: __init__.py  agent.py  monitors.py  thresholds.py
backend/agents/agent_c/: __init__.py  agent.py  compliance.py
backend/agents/agent_d/: __init__.py  agent.py  telegram_notifier.py
backend/api/: chat.py  compliance.py  health.py  kb.py  milestones.py  notifications.py  projects.py  reports.py  upload.py
backend/core/: config.py  firebase_client.py  glm_client.py  storage.py
backend/tests/: test_agent_a_integration.py  test_agent_a_mock.py  test_agent_b.py  test_compliance_check.py  test_edge_cases.py  test_integration_pipeline.py  test_quality_gates.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
mock_storage/: cd88e8b5-bc85-491b-ab96-5e522bb15334_cost_tracker_347f60e5-074f-4131-9318-38488e09b72a.xlsx
test docs/dummy doc 2/: Skyline_Heights_CIDB_Permit_Application (Project).docx  Skyline_Heights_Schedule (Project).docx
test docs/eco green/: CIDB_PERMIT_APPLICATION_FORM_(EcoGreen).docx
(+20 files in other folders)
